---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/literal.rs
description: Rejects empty objects as literals
expression: "{}"
---
[31m[parser::object::empty] Error:[0m Parser
   ╭─[ <unknown>:1:1 ]
   │
 1 │ {}
   │ ─┬  
   │  ╰── Add required fields to this object
   │ 
   │ Help: J-Expr objects must contain at least one key-value pair with a specific structure. For example: `{"#literal": 42}` or `{"#struct": {"name": {"#literal": "value"}}}`
   │ 
   │ Note: J-Expr requires objects to have a specific structure represented by one of these constructs:
   │       - `{"#struct": {...}, "#type"?: ...}` - For structured data with named fields
   │       - `{"#dict": {...}, "#type"?: ...}` - For dictionary/map-like data
   │       - `{"#tuple": [...], "#type"?: ...}` - For fixed-size ordered collections
   │       - `{"#list": [...], "#type"?: ...}` - For variable-length ordered collections
   │       - `{"#literal": value}` - For simple scalar values
   │       - `{"#type": "typename"}` - For type declarations
   │       
   │       Empty objects don't have semantic meaning in J-Expr.
───╯
